--- a/login.html
+++ b/login.html
@@ -41,9 +41,10 @@
             <div class="container">
                 <div class="login-wrap">
                     <div class="login-content">
-                        <div class="login-logo">
+                        <div class="login-logo bg-black
+                        ">
                             <a href="#">
-                                <img src="./images/icone_kd.png" alt="KD Sistema">
+                                <img src="./images/kd_sistema_blue.png" alt="KD Sistema">
                             </a>
                         </div>
                         <div class="login-form">
