--- a/stock.html
+++ b/stock.html
@@ -6,8 +6,9 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
   <meta name="description" content="au theme template" />
-  <meta name="author" content="Hau Nguyen" />
+  <meta name="author" content="Kelvin/Diogo" />
   <meta name="keywords" content="au theme template" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
   <!-- Title Page-->
   <title>Estoque</title>
 
@@ -41,7 +42,7 @@
         <div class="container-fluid">
           <div class="header-mobile-inner">
             <a class="logo" href="index.html">
-              <img src="./images/icone_kd.png" style="width: 75%;" alt="KD Sistema">
+              <img src="./images/kd_sistema_blue.png" style="width: 75%;" alt="KD Sistema">
             </a>
             <button class="hamburger hamburger--slider" type="button">
               <span class="hamburger-box">
@@ -164,13 +165,13 @@
     <aside class="menu-sidebar d-none d-lg-block">
       <div class="logo">
         <a href="#">
-          <img src="./images/icone_kd.png" alt="KD Sistema">
+          <img src="./images/kd_sistema_blue.png" alt="KD Sistema">
         </a>
       </div>
       <div class="menu-sidebar__content js-scrollbar1 text-white">
         <nav class="navbar-sidebar">
           <ul class="list-unstyled navbar__list">
-            <li class="active has-sub">
+            <li class="has-sub">
               <a class="js-arrow" href="#">
                 <i class="fas fa-tachometer-alt text-white"></i>Dashboard</a>
               <ul class="list-unstyled navbar__sub-list js-sub-list">
@@ -188,30 +189,30 @@
                 </li>
               </ul>
             </li>
-            <li>
+            <li class="active ">
               <a href="stock.html"> <i class="fas fa-box"></i>Estoque</a>
             </li>
             <li>
-              <a href="chart.html"> <i class="fas fa-chart-bar"></i>Charts</a>
+              <a href="chart.html"> <i class="fas fa-chart-bar"></i>Gráficos</a>
             </li>
             <li>
-              <a href="table.html"> <i class="fas fa-table"></i>Tables</a>
+              <a href="table.html"> <i class="fas fa-table"></i>Tabelas</a>
             </li>
             <li>
               <a href="form.html">
-                <i class="far fa-check-square"></i>Forms</a>
+                <i class="far fa-check-square"></i>Formularios</a>
             </li>
             <li>
               <a href="calendar.html">
-                <i class="fas fa-calendar-alt"></i>Calendar</a>
+                <i class="fas fa-calendar-alt"></i>Calendario</a>
             </li>
             <li>
               <a href="map.html">
-                <i class="fas fa-map-marker-alt"></i>Maps</a>
+                <i class="fas fa-map-marker-alt"></i>Mapa</a>
             </li>
             <li class="has-sub">
               <a class="js-arrow" href="#">
-                <i class="fas fa-copy"></i>Pages</a>
+                <i class="fas fa-copy"></i>Páginas</a>
               <ul class="list-unstyled navbar__sub-list js-sub-list">
                 <li>
                   <a href="produtos.html">Produtos</a>
@@ -404,9 +405,11 @@
                 </div>
                 <div class="account-wrap">
                   <div class="account-item clearfix js-item-menu">
-                    
+
                     <div class="image">
-                      <img src="https://web.whatsapp.com/pp?e=https%3A%2F%2Fpps.whatsapp.net%2Fv%2Ft61.24694-24%2F71535397_614483455787605_8695797236034261492_n.jpg%3Foe%3D5E587B1A%26oh%3Dd7d4f4219dca08460a290743e325a494&t=l&u=5516993639312%40c.us&i=1582584586" alt="John Doe" />
+                      <img
+                        src="https://web.whatsapp.com/pp?e=https%3A%2F%2Fpps.whatsapp.net%2Fv%2Ft61.24694-24%2F71535397_614483455787605_8695797236034261492_n.jpg%3Foe%3D5E587B1A%26oh%3Dd7d4f4219dca08460a290743e325a494&t=l&u=5516993639312%40c.us&i=1582584586"
+                        alt="John Doe" />
                     </div>
                     <div class="content">
                       <a class="js-acc-btn text-white" href="#">Diogo</a>
@@ -455,13 +458,11 @@
       <!-- MAIN CONTENT-->
       <div class="main-content">
         <div class="section__content section__content--p30">
-          <div class="mb-4" style="    display: block;
-          width: 100%;">
+          <div class="mb-4" style="display: block; width: 100%;">
             <h2 class="bg-info text-white pl-2 pt-2 pb-2 text-center">Estoque</h2>
           </div>
-
           <div class="container-fluid">
-            <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog"
+            <div class="modal fade" style="margin-top: 190px;" id="exampleModalCenter" tabindex="-1" role="dialog"
               aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
@@ -490,20 +491,20 @@
                             <input class="form-control" type="text" name="" id="Valor" aria-label="Recipient's "
                               aria-describedby="my-addon">
                             <div class="input-group-append">
-                              <span class="input-group-text" id="my-addon">Valor(R$)</span>
+                              <span class="input-group-text">Valor(R$)</span>
                             </div>
                           </div>
                         </div>
                         <div>
                           <label for="">Categoria</label>
                           <div class="input-group">
-                            <select id="my-select" class="form-control" name="" id="categoria">
-                              <optio value='1'>Text</option>
+                            <select class="form-control" name="" id="categoria">
+                              <option value=""></option>
                             </select>
                             <div class="form-group">
 
                               <div class="input-group-append">
-                                <span class="input-group-text" id="my-addon">Categoria</span>
+                                <span class="input-group-text">Categoria</span>
                               </div>
                             </div>
 
@@ -512,8 +513,8 @@
                         <div>
                           <label for="">Fornecedor</label>
                           <div class="input-group">
-                            <select id="my-select" class="form-control" name="" id="fornecedor">
-                              <option value="1">Text</option>
+                            <select class="form-control" name="" id="fornecedor">
+                              <option value=""></option>
                             </select>
                             <div class="form-group">
 
@@ -540,7 +541,7 @@
               aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
-                  <div class="modal-header bg-info">
+                  <div class="modal-header bg-black">
                     <h5 class="modal-title text-white" id="exampleModalCenterTitle">Atualizar Produto</h5>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
@@ -572,13 +573,14 @@
                         <div>
                           <label for="">Categoria</label>
                           <div class="input-group">
-                            <select id="my-select" class="form-control" name="" id="categoria">
-                              <optio value='1'>Fornecedor 1</option>
+                            <select class="form-control" name="" id="categoriaum">
+                              <option value=""></option>
                             </select>
                             <div class="form-group">
 
                               <div class="input-group-append">
-                                <span class="input-group-text" id="my-addon">Categoria</span>
+                                <span class="input-group-text">Categoria</span>
+
                               </div>
                             </div>
 
@@ -587,8 +589,8 @@
                         <div>
                           <label for="">Fornecedor</label>
                           <div class="input-group">
-                            <select id="my-select" class="form-control" name="" id="fornecedor">
-                              <option value="1">Text</option>
+                            <select class="form-control" name="" id="fornecedorum">
+                              <option value=""></option>
                             </select>
                             <div class="form-group">
 
@@ -606,7 +608,7 @@
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
-                    <button type="submit" class="btn btn-primary" id="atualizar" name="submit">Atualizar</button>
+                    <button type="submit" class="btn btn-info" id="atualizar" name="submit">Atualizar</button>
                   </div>
                 </div>
               </div>
@@ -614,16 +616,17 @@
             <div class="">
               <!-- STATISTIC-->
               <section>
-           
-                <div class="row mb-4 pb-sm-2">
 
-                  <div class=" col-md-12  d-flex justify-content-between mb-2 font-weight-bold">
-                    <button class="btn btn-success  mesmo-tamanho font-weight-bold" type="button">Produto</button>
+                <div class="row mb-4 d-flex justify-content-between">
+
+                  <div class="col-md-5 d-flex justify-content-between botaomargin font-weight-bold ">
+                    <button class="btn btn-success  mesmo-tamanho font-weight-bold" type="button" data-toggle="modal"
+                      data-target="#exampleModalCenter">Produto</button>
                     <button class="btn btn-info  mesmo-tamanho font-weight-bold" type="button">Fornecedor</button>
 
                   </div>
 
-                  <div class="col-md-3 ml-md-5 pl-md-5  d-flex justify-content-between font-weight-bold">
+                  <div class="col-md-5    d-flex justify-content-between font-weight-bold">
                     <button class="btn btn-warning  mesmo-tamanho font-weight-bold" type="button">Categoria</button>
                     <button class="btn btn-primary  mesmo-tamanho font-weight-bold" type="button">Lanche</button>
                   </div>
@@ -652,9 +655,9 @@
                     <thead>
                       <tr class="bg-black text-white">
                         <th scope="col">#</th>
-                        <th scope="col">Descição</th>
+                        <th scope="col">Descrição</th>
                         <th scope="col">Valor</th>
-                        <th scope="col">Quantidade</th>
+                        <th scope="col">Quant.</th>
                         <th scope="col">Categoria</th>
                         <th scope="col">Forncedor</th>
                         <th scope="col">Editar</th>
@@ -673,8 +676,11 @@
               <div class="col-md-12">
                 <div class="copyright">
                   <p>
-                    Copyright © 2018 Colorlib. All rights reserved. Template
-                    by <a href="https://colorlib.com">Colorlib</a>.
+                    Copyright © 2020 KD. All rights reserved. <br>
+                    <span class="text-info">KD</span>
+                    <span class="text-info">S</span>istema
+                    <span class="text-info">G</span>erenciador
+
                   </p>
                 </div>
               </div>
