--- a/register.html
+++ b/register.html
@@ -6,8 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="au theme template">
-    <meta name="author" content="Hau Nguyen">
+    <meta name="author" content="KD devs" />
     <meta name="keywords" content="au theme template">
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
     <!-- Title Page-->
     <title>Cadastro</title>
@@ -43,38 +44,48 @@
                     <div class="login-content">
                         <div class="login-logo">
                             <a href="#">
-                                <img src="./images/icone_kd.png" alt="KD Sistema">
+                                <img src="./images/kd_sistema_blue.png" alt="KD Sistema">
                             </a>
                         </div>
                         <div class="login-form">
-                            <form action="" method="post">
+                            <form action="" method="post" id="createUser">
                                 <div class="form-group">
                                     <label>Usuario</label>
-                                    <input class="au-input au-input--full" type="text" name="username"
-                                        placeholder="Username">
+                                    <input class="au-input au-input--full" type="text" name="nome"
+                                        placeholder="nome de usuario" required="true" id="nome">
                                 </div>
                                 <div class="form-group">
                                     <label>Email</label>
                                     <input class="au-input au-input--full" type="email" name="email"
-                                        placeholder="Email">
+                                        placeholder="exemplo@email.com" required="true" id="email">
                                 </div>
                                 <div class="form-group">
-                                    <label>Senha</label>
-                                    <input class="au-input au-input--full" type="password" name="password"
-                                        placeholder="Senha">
+                                    <label>Email de Recuperação</label>
+                                    <input class="au-input au-input--full" type="email" name="email_recuperacao"
+                                        id="email_recuperacao" placeholder="exemplo@outroemail.com" required="true">
                                 </div>
-                                <div class="form-group">
-                                    <label>Confirme a Senha</label>
-                                    <input class="au-input au-input--full" type="password" name="password"
-                                        placeholder="">
+                                <div class="row">
+                                    <div class=" col-md-6 form-group">
+                                        <label>Senha</label>
+                                        <input class="au-input au-input--full" type="password" name="password"
+                                            placeholder="Senha" required="true" id="password">
+                                    </div>
+                                    <div class="col-md-6 form-group">
+                                        <label>Confirme a Senha</label>
+                                        <input class="au-input au-input--full" type="password" name="password"
+                                            placeholder="Confirme a Senha" required="true">
+                                    </div>
                                 </div>
+
                                 <div class="login-checkbox">
                                     <label>
                                         <input type="checkbox" name="aggree">Aceita os termos de uso?
                                     </label>
                                 </div>
-                                <button class="au-btn au-btn--block au-btn--green m-b-20"
-                                    type="submit">Cadastro</button>
+                                <button class="au-btn au-btn--block au-btn-- btn-info m-b-20" type="button"
+                                    id="submit">Cadastro</button>
+
+                                <!--
                                 <div class="social-login-content">
                                     <div class="social-button">
                                         <button class="au-btn au-btn--block au-btn--blue m-b-20">Cadastro com
@@ -82,6 +93,7 @@
 
                                     </div>
                                 </div>
+                                -->
                             </form>
                             <div class="register-link">
                                 <p>
@@ -120,7 +132,35 @@
 
     <!-- Main JS-->
     <script src="js/main.js"></script>
+    <script>
+        $("#submit").click(function () {
+            var obj = {
+                nome: '',
+                email: '',
+                password: '',
+                email_recuperacao: ''
+            }
 
+            obj.nome = $("#nome").val();
+            obj.email = $("#email").val();
+            obj.password = $("#password").val();
+            obj.email_recuperacao = $("#email_recuperacao ").val();
+
+            console.log(obj)
+            // var post_url = "http://localhost:3000/user/create";
+
+            var post_url = "https://kd-gerenciador.herokuapp.com/user/create";
+            $.ajax({
+                url: post_url,
+                type: 'POST',
+                data: obj
+            }).done(function (response) { //
+
+                //document.location.reload();
+                window.location.href = "login.html";
+            });
+        });
+    </script>
 </body>
 
 </html>
