--- a/login.html
+++ b/login.html
@@ -6,8 +6,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="au theme template">
-    <meta name="author" content="Hau Nguyen">
+    <meta name="author" content="KD devs" />
     <meta name="keywords" content="au theme template">
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
 
     <!-- Title Page-->
     <title>Login</title>
@@ -39,44 +40,53 @@
     <div class="page-wrapper">
         <div class="page-content--bge5">
             <div class="container">
+
                 <div class="login-wrap">
-                    <div class="login-content">
-                        <div class="login-logo bg-black
-                        ">
+                    <div class="login-conten bg-white">
+                        <h2 class="text-info  text-center pt-2 mb-2">LOGIN</h2>
+                        <div class="login-logo bg-black">
                             <a href="#">
                                 <img src="./images/kd_sistema_blue.png" alt="KD Sistema">
                             </a>
                         </div>
-                        <div class="login-form">
-                            <form action="submit" method="post">
+                        <div class="login-form ml-3 mr-3">
+                            <form action="" method="post">
                                 <div class="form-group">
                                     <label>Email </label>
-                                    <input class="au-input au-input--full" type="email" name="email"
-                                        placeholder="Email">
+                                    <input class="au-input au-input--full" type="email" name="email" placeholder="Email"
+                                        id="email">
                                 </div>
                                 <div class="form-group">
                                     <label>Senha</label>
                                     <input class="au-input au-input--full" type="password" name="password"
-                                        placeholder="Senha">
+                                        placeholder="Senha" id="password">
                                 </div>
                                 <div class="login-checkbox">
                                     <label>
-                                        <input type="checkbox" name="remember">Lembrar-me
+                                        <input type="checkbox" name="remember" id="form-password">Lembrar-me
                                     </label>
                                     <label>
                                         <a href="#">Esqueceu a Senha?</a>
                                     </label>
                                 </div>
-                                <button class="au-btn au-btn--block btn-info m-b-20" type="submit" >Entrar
-                                    
-                                </button>
+
+                                <div class="mt-4">
+                                    <button class="au-btn au-btn--block btn-info m-b-20" type="button"
+                                        id="login"><b></b>
+                                        Entrar</b>
+
+                                    </button>
+                                </div>
+
+                                <!--
                                 <div class="social-login-content">
                                     <div class="social-button">
                                         <button class="au-btn au-btn--block au-btn--blue m-b-20">sign in with
                                             facebook</button>
-                                      <!-- <button class="au-btn au-btn--block au-btn--blue2">sign in with twitter</button>-->
+                                       <button class="au-btn au-btn--block au-btn--blue2">sign in with twitter</button>
                                     </div>
                                 </div>
+                            -->
                             </form>
                             <div class="register-link">
                                 <p>
@@ -115,7 +125,50 @@
 
     <!-- Main JS-->
     <script src="js/main.js"></script>
+    <script>
+        $("#login").click(function () {
 
+            var obj = {
+                email: '',
+                password: ''
+            }
+
+            obj.email = $("#email").val();
+            obj.password = $("#password").val();
+
+
+            //var post_url = "http://localhost:3000/user/login";
+
+            var post_url = "https://kd-gerenciador.herokuapp.com/user/login";
+            /*
+            $.ajax({
+                url: post_url,
+                type: 'POST',
+                data: obj
+            }).done(
+                function (response) { //
+
+                    //document.location.reload();
+                    console.log(JSON.stringify(response[0]))
+                    sessionStorage.setItem("user", JSON.stringify(response[0]));
+                    window.location.href = "index.html";
+
+                });
+            */
+            $.ajax({
+                url: post_url,
+                type: 'POST',
+                data: obj, // added data type
+                success: function (response) {
+                    console.log(JSON.stringify(response[0]))
+                    sessionStorage.setItem("user", JSON.stringify(response[0]));
+                    window.location.href = "index.html";
+                },
+                
+
+            });
+        });
+    </script>
 </body>
 
 </html>
