--- a/register.html
+++ b/register.html
@@ -41,13 +41,14 @@
         <div class="page-content--bge5">
             <div class="container">
                 <div class="login-wrap">
-                    <div class="login-content">
-                        <div class="login-logo">
+                    <div class=" bg-white pt-2 ">
+                        <h2 class="text-info  text-center mb-2">CADASTRO</h2>
+                        <div class="login-logo  bg-black">
                             <a href="#">
                                 <img src="./images/kd_sistema_blue.png" alt="KD Sistema">
                             </a>
                         </div>
-                        <div class="login-form">
+                        <div class="login-form ml-3 mr-3 login-content">
                             <form action="" method="post" id="createUser">
                                 <div class="form-group">
                                     <label>Usuario</label>
@@ -95,7 +96,7 @@
                                 </div>
                                 -->
                             </form>
-                            <div class="register-link">
+                            <div class="register-link pb-3">
                                 <p>
                                     Já tem Conta ?
                                     <a href="login.html">Logar</a>
