--- a/stock.html
+++ b/stock.html
@@ -473,7 +473,7 @@
                     </button>
                   </div>
                   <div class="modal-body">
-                    <form action="http://localhost:3000/produtos/criar" method="post" id="formProduto">
+                    <form action="https://kd-gerenciador.herokuapp.com/produtos/criar" method="post" id="formProduto">
                       <div>
                         <div>
                           <label for="">Descrição</label>
@@ -548,13 +548,12 @@
                     </button>
                   </div>
                   <div class="modal-body">
-                    <form action="http://localhost:3000/produtos/atualizar" method="put" id="formProduto">
+                    <form action="https://kd-gerenciador.herokuapp.com/produtos/atualizar" method="put" id="formProduto">
                       <div>
                         <div>
                           <label for="">Descrição</label>
                           <div class="input-group">
-                            <input class="form-control" type="text" id="DescricaoA" name="" aria-label="Recipient's "
-                              aria-describedby="my-addon">
+                            <input class="form-control" type="text" id="DescricaoA" name="">
                             <div class="input-group-append">
                               <span class="input-group-text" id="des">Descrição</span>
                             </div>
@@ -563,8 +562,7 @@
                         <div>
                           <label for="">Valor</label>
                           <div class="input-group">
-                            <input class="form-control" type="text" name="" id="ValorA" aria-label="Recipient's "
-                              aria-describedby="my-addon">
+                            <input class="form-control" type="text" name="" id="ValorA" >
                             <div class="input-group-append">
                               <span class="input-group-text" id="my-addon">Valor(R$)</span>
                             </div>
