--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
                 <div class="account-wrap">
                   <div class="account-item clearfix js-item-menu">
                     <div class="image">
-                      <img src="images/icon/avatar-01.jpg" alt="John Doe" />
+                      <img src="images/icon/avatar-01.jpg" alt="" />
                     </div>
                     <div class="content">
                       <a class="js-acc-btn text-white" href="#" id="usuario_nome"></a>
