--- a/stock.html
+++ b/stock.html
@@ -275,11 +275,7 @@
       </div>
     </aside>
     END MENU SIDEBAR-->
-   <?
-   require('menu.html')
-
-   ?>
-  
+    <link rel="import" href="./menu.html">
     <div id="menu"> </div>
     <!-- PAGE CONTAINER-->
     <div class="page-container">
