--- a/stock.html
+++ b/stock.html
@@ -275,8 +275,8 @@
       </div>
     </aside>
     END MENU SIDEBAR-->
-    <link rel="import" href="./menu.html">
-    <div id="menu"> </div>
+
+    <div w3-include-html="menu.html"> </div>
     <!-- PAGE CONTAINER-->
     <div class="page-container">
       <!-- HEADER DESKTOP-->
@@ -549,7 +549,8 @@
                     </button>
                   </div>
                   <div class="modal-body">
-                    <form action="https://kd-gerenciador.herokuapp.com/produtos/atualizar" method="put" id="formProduto">
+                    <form action="https://kd-gerenciador.herokuapp.com/produtos/atualizar" method="put"
+                      id="formProduto">
                       <div>
                         <div>
                           <label for="">Descrição</label>
@@ -563,7 +564,7 @@
                         <div>
                           <label for="">Valor</label>
                           <div class="input-group">
-                            <input class="form-control" type="text" name="" id="ValorA" >
+                            <input class="form-control" type="text" name="" id="ValorA">
                             <div class="input-group-append">
                               <span class="input-group-text" id="my-addon">Valor(R$)</span>
                             </div>
@@ -694,11 +695,6 @@
 
   <!-- Jquery JS-->
   <script src="vendor/jquery-3.2.1.min.js"></script>
-  <script> 
-    $(function(){
-      $("#includedContent").load("menu.html"); 
-    });
-    </script> 
   <!-- Bootstrap JS-->
   <script src="vendor/bootstrap-4.1/popper.min.js"></script>
   <script src="vendor/bootstrap-4.1/bootstrap.min.js"></script>
@@ -716,10 +712,48 @@
 
   <!-- Main JS-->
   <script src="js/main.js"></script>
- <script>
-   $("#menu").append("./menu.html")
- </script>
+
+  <script>
+    function includeHTML() {
+      var z, i, elmnt, file, xhttp;
+      /*loop through a collection of all HTML elements:*/
+      z = document.getElementsByTagName("*");
+      for (i = 0; i < z.length; i++) {
+        elmnt = z[i];
+        /*search for elements with a certain atrribute:*/
+        file = elmnt.getAttribute("w3-include-html");
+        if (file) {
+          /*make an HTTP request using the attribute value as the file name:*/
+          xhttp = new XMLHttpRequest();
+          xhttp.onreadystatechange = function () {
+            if (this.readyState == 4) {
+              if (this.status == 200) {
+                elmnt.innerHTML = this.responseText;
+              }
+              if (this.status == 404) {
+                elmnt.innerHTML = "Page not found.";
+              }
+              /*remove the attribute, and call this function once more:*/
+              elmnt.removeAttribute("w3-include-html");
+              includeHTML();
+            }
+          }
+          xhttp.open("GET", file, true);
+          xhttp.send();
+          /*exit the function:*/
+          return;
+        }
+      }
+    };
+  </script>
+  <script>
+    includeHTML();
+  </script>
+  <script src="js/main.js"></script>
   <script src="js/estoque.js"></script>
+</body>
+
+<script src="js/estoque.js"></script>
 </body>
 
 </html>
