--- a/stock.html
+++ b/stock.html
@@ -32,6 +32,9 @@
 
   <!-- Main CSS-->
   <link href="css/theme.css" rel="stylesheet" media="all" />
+  <!-- Jquery JS-->
+  <script src="vendor/jquery-3.2.1.min.js"></script>
+  <script src="https://www.w3schools.com/lib/w3data.js"></script>
 </head>
 
 <body class="animsition">
@@ -692,8 +695,7 @@
     </div>
   </div>
 
-  <!-- Jquery JS-->
-  <script src="vendor/jquery-3.2.1.min.js"></script>
+
   <!-- Bootstrap JS-->
   <script src="vendor/bootstrap-4.1/popper.min.js"></script>
   <script src="vendor/bootstrap-4.1/bootstrap.min.js"></script>
@@ -711,7 +713,7 @@
 
   <!-- Main JS-->
   <script src="js/main.js"></script>
-
+  <script type="text / javascript" src="https: //www.w3schools.com/lib/w3data.js "></script>
   <script>
     function includeHTML() {
       var z, i, elmnt, file, xhttp;
@@ -748,50 +750,9 @@
   <script>
     includeHTML();
   </script>
-  <script src="js/main.js"></script>
+
   <script src="js/estoque.js"></script>
-  <!--
-  <script>
-    function includeHTML() {
-      var z, i, elmnt, file, xhttp;
-      /*loop through a collection of all HTML elements:*/
-      z = document.getElementsByTagName("*");
-      for (i = 0; i < z.length; i++) {
-        elmnt = z[i];
-        /*search for elements with a certain atrribute:*/
-        file = elmnt.getAttribute("w3-include-html");
-        if (file) {
-          /*make an HTTP request using the attribute value as the file name:*/
-          xhttp = new XMLHttpRequest();
-          xhttp.onreadystatechange = function () {
-            if (this.readyState == 4) {
-              if (this.status == 200) {
-                elmnt.innerHTML = this.responseText;
-              }
-              if (this.status == 404) {
-                elmnt.innerHTML = "Page not found.";
-              }
-              /*remove the attribute, and call this function once more:*/
-              elmnt.removeAttribute("w3-include-html");
-              includeHTML();
-            }
-          }
-          xhttp.open("GET", file, true);
-          xhttp.send();
-          /*exit the function:*/
-          return;
-        }
-      }
-    };
-  </script>
- 
-  <script>
-    includeHTML();
-  </script>
-   -->
-</body>
 
-<script src="js/estoque.js"></script>
 </body>
 
 </html>
