--- a/stock.html
+++ b/stock.html
@@ -410,12 +410,11 @@
                   <div class="account-item clearfix js-item-menu">
 
                     <div class="image">
-                      <img
-                        src="https://web.whatsapp.com/pp?e=https%3A%2F%2Fpps.whatsapp.net%2Fv%2Ft61.24694-24%2F71535397_614483455787605_8695797236034261492_n.jpg%3Foe%3D5E587B1A%26oh%3Dd7d4f4219dca08460a290743e325a494&t=l&u=5516993639312%40c.us&i=1582584586"
-                        alt="John Doe" />
+                      <img src="./images/icon/avatar-01.jpg"  ´
+                      i alt="Avatar" />
                     </div>
                     <div class="content">
-                      <a class="js-acc-btn text-white" href="#">Diogo</a>
+                      <a class="js-acc-btn text-white usuario_nome" href="#" id="usuario_nome"></a>
                     </div>
                     <div class="account-dropdown js-dropdown">
                       <div class="info clearfix">
@@ -540,13 +539,90 @@
                 </div>
               </div>
             </div>
-            <div class="modal fade" style="margin-top: 190px;" id="atualizarModal" tabindex="-1" role="dialog"
+
+            <div class="modal fade" id="atualizarModal" tabindex="-1" role="dialog"
               aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
               <div class="modal-dialog modal-dialog-centered" role="document">
                 <div class="modal-content">
                   <div class="modal-header bg-black">
                     <h5 class="modal-title text-white" id="exampleModalCenterTitle">Atualizar Produto</h5>
-                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <button type="button" class="close " style="color: aliceblue;" data-dismiss="modal"
+                      aria-label="Close">
+                      <span aria-hidden="true">&times;</span>
+                    </button>
+                  </div>
+                  <div class="modal-body">
+                    <form action="https://kd-gerenciador.herokuapp.com/produtos/atualizar" method="put"
+                      id="formProduto">
+                      <div>
+                        <div>
+                          <label for="">Descrição</label>
+                          <div class="input-group">
+                            <input class="form-control" type="text" id="DescricaoA" name="">
+                            <div class="input-group-append">
+                              <span class="input-group-text" id="des">Descrição</span>
+                            </div>
+                          </div>
+                        </div>
+                        <div>
+                          <label for="">Valor</label>
+                          <div class="input-group">
+                            <input class="form-control" type="text" name="" id="ValorA">
+                            <div class="input-group-append">
+                              <span class="input-group-text" id="my-addon">Valor(R$)</span>
+                            </div>
+                          </div>
+                        </div>
+                        <div>
+                          <label for="">Categoria</label>
+                          <div class="input-group">
+                            <select class="form-control" name="" id="categoriaum">
+                              <option value=""></option>
+                            </select>
+                            <div class="form-group">
+
+                              <div class="input-group-append">
+                                <span class="input-group-text">Categoria</span>
+
+                              </div>
+                            </div>
+
+                          </div>
+                        </div>
+                        <div>
+                          <label for="">Fornecedor</label>
+                          <div class="input-group">
+                            <select class="form-control" name="" id="fornecedorum">
+                              <option value=""></option>
+                            </select>
+                            <div class="form-group">
+
+                              <div class="input-group-append">
+                                <span class="input-group-text" id="forn">Fornecedor</span>
+                              </div>
+                            </div>
+
+                          </div>
+                        </div>
+                      </div>
+
+
+                    </form>
+                  </div>
+                  <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Fechar</button>
+                    <button type="submit" class="btn btn-info" id="atualizar" name="submit">Atualizar</button>
+                  </div>
+                </div>
+              </div>
+            </div>
+            <div class="modal fade" id="modalFornecedor" tabindex="-1" role="dialog"
+              aria-labelledby="fornecedorModal aria-hidden=" true">
+              <div class="modal-dialog modal-dialog-centered" role="document">
+                <div class="modal-content">
+                  <div class="modal-header bg-black" style="color: aliceblue;">
+                    <h5 class="modal-title text-white" id="fornecedorModal"> Novo Fornecedor</h5>
+                    <button type="button" class="close " data-dismiss="modal" aria-label="Close">
                       <span aria-hidden="true">&times;</span>
                     </button>
                   </div>
@@ -624,11 +700,15 @@
                   <div class="col-md-5 d-flex justify-content-between botaomargin font-weight-bold ">
                     <button class="btn btn-success  mesmo-tamanho font-weight-bold" type="button" data-toggle="modal"
                       data-target="#exampleModalCenter">Produto</button>
-                    <button class="btn btn-info  mesmo-tamanho font-weight-bold" type="button">Fornecedor</button>
+
+                    <button class="btn btn-info  mesmo-tamanho font-weight-bold" type="button" data-toggle="modal"
+                      data-target="#modalFornecedor">
+                      Fornecedor
+                    </button>
 
                   </div>
 
-                  <div class="col-md-5    d-flex justify-content-between font-weight-bold">
+                  <div class="col-md-5 d-flex justify-content-between font-weight-bold">
                     <button class="btn btn-warning  mesmo-tamanho font-weight-bold" type="button">Categoria</button>
                     <button class="btn btn-primary  mesmo-tamanho font-weight-bold" type="button">Lanche</button>
                   </div>
@@ -713,7 +793,8 @@
 
   <!-- Main JS-->
   <script src="js/main.js"></script>
-  <script type="text / javascript" src="https: //www.w3schools.com/lib/w3data.js "></script>
+  <script type="text/javascript" src="https://www.w3schools.com/lib/w3data.js"></script>
+  <script src="js/allpages.js"> </script>
   <script>
     function includeHTML() {
       var z, i, elmnt, file, xhttp;
