--- a/stock.html
+++ b/stock.html
@@ -410,8 +410,7 @@
                   <div class="account-item clearfix js-item-menu">
 
                     <div class="image">
-                      <img src="./images/icon/avatar-01.jpg"  ´
-                      i alt="Avatar" />
+                      <img src="./images/icon/avatar-01.jpg" ´ i alt="Avatar" />
                     </div>
                     <div class="content">
                       <a class="js-acc-btn text-white usuario_nome" href="#" id="usuario_nome"></a>
@@ -754,19 +753,26 @@
               </div>
             </div>
             <!-- END DATA TABLE-->
-            <div class="row">
-              <div class="col-md-12">
-                <div class="copyright">
-                  <p>
-                    Copyright © 2020 KD. All rights reserved. <br>
-                    <span class="text-info">KD</span>
-                    <span class="text-info">S</span>istema
-                    <span class="text-info">G</span>erenciador
 
-                  </p>
+            <footer class="footer navbar-fixed-bottom">
+              <div class="row mt-5 bg-black">
+                <div class="col-md-12 ">
+                  <div class="copyright ">
+                    <p>
+                      Copyright © 2020 KD. All rights reserved. <br>
+                      <span class="text-info">KD</span>
+                      <span class="text-info">S</span>istema
+                      <span class="text-info">G</span>erenciador
+
+                    </p>
+                  </div>
                 </div>
               </div>
-            </div>
+
+            </footer>
+
+
+
           </div>
         </div>
       </div>
@@ -793,7 +799,7 @@
 
   <!-- Main JS-->
   <script src="js/main.js"></script>
-  <script type="text/javascript" src="https://www.w3schools.com/lib/w3data.js"></script>
+  <script src="https://www.w3schools.com/lib/w3data.js"></script>
   <script src="js/allpages.js"> </script>
   <script>
     function includeHTML() {
@@ -829,7 +835,7 @@
     };
   </script>
   <script>
-    includeHTML();
+    includeHTML()
   </script>
 
   <script src="js/estoque.js"></script>
