--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
     <nav class="navbar-sidebar">
       <ul class="list-unstyled navbar__list">
         <li class="has-sub">
-          <a class="js-arrow" href="index.html">
+          <a class="js-arrow" href="#">
             <i class="fas fa-tachometer-alt text-white" ></i>Dashboard</a>
           <ul class="list-unstyled navbar__sub-list js-sub-list">
             <li>
