sucesso componetizaçao javascript

--- a/index.html
+++ b/index.html
@@ -157,8 +157,8 @@
       </nav>
     </header>
     <!-- END HEADER MOBILE-->
-
-    <!-- MENU SIDEBAR-->
+    <div  class="menu-html"> </div>
+    <!-- MENU SIDEBAR
     <aside class="menu-sidebar d-none d-lg-block">
       <div class="logo">
         <a href="#">
@@ -271,7 +271,7 @@
         </nav>
       </div>
     </aside>
-    <!-- END MENU SIDEBAR-->
+    END MENU SIDEBAR-->
 
     <!-- PAGE CONTAINER-->
     <div class="page-container">
