--- a/table.html
+++ b/table.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
     <!-- Required meta tags-->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="description" content="au theme template">
-    <meta name="author" content="Hau Nguyen">
-    <meta name="keywords" content="au theme template">
-
+    <meta name="author" content="Kelvin/Diogo" />
+    <meta name="keywords" content="au theme template" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
     <!-- Title Page-->
-    <title>Tables</title>
+    <title>Tabelas</title>
 
     <!-- Fontfaces CSS-->
     <link href="css/font-face.css" rel="stylesheet" media="all">
@@ -154,7 +154,7 @@
         </header>
         <!-- END HEADER MOBILE-->
 
-        <!-- MENU SIDEBAR-->
+        <!-- MENU SIDEBAR
         <aside class="menu-sidebar d-none d-lg-block">
             <div class="logo">
                 <a href="#">
@@ -260,8 +260,8 @@
                 </nav>
             </div>
         </aside>
-        <!-- END MENU SIDEBAR-->
-
+        END MENU SIDEBAR-->
+        <div class="menu-html"> </div>
         <!-- PAGE CONTAINER-->
         <div class="page-container">
             <!-- HEADER DESKTOP-->
