--- a/menu.html
+++ b/menu.html
@@ -26,8 +26,11 @@
             </li>
           </ul>
         </li>
-        <li n>
+        <li>
           <a href="stock.html"> <i class="fas fa-box"></i>Estoque</a>
+        </li>
+        <li n>
+          <a href="vendas.html"> <i class="fas fa-box"></i>Vendas</a>
         </li>
         <li>
           <a href="chart.html"> <i class="fas fa-chart-bar"></i>Gráficos</a>
