--- a/login.html
+++ b/login.html
@@ -33,41 +33,42 @@
 
     <!-- Main CSS-->
     <link href="css/theme.css" rel="stylesheet" media="all">
-   <style>
-       .container{
-           height: 1000px;
-       }
-   </style>
+    <style>
+        .container {
+            height: 1000px;
+        }
+    </style>
 </head>
 
 <body class="animsition">
     <div class="page-wrapper">
         <div class="page-content--bge5">
-            <div class="container">
+            <div class="container  ">
 
                 <div class="login-wrap">
-                    <div class="bg-white">
+                    <div class="bg-white" style="border: black 1px solid;">
                         <h2 class="text-info  text-center pt-2 mb-2">LOGIN</h2>
                         <div class="login-logo bg-black">
                             <a href="#">
                                 <img src="./images/kd_sistema_blue.png" alt="KD Sistema">
                             </a>
                         </div>
-                        <div class="login-form ml-3 mr-3 login-content ">
+                        <div class="login-form ml-3 mr-3 login-content "
+                            style="background-color: rgb(230, 230, 230) !important; ">
                             <form action="" method="post">
-                                <div class="form-group">
+                                <div class="form-group pt-2 text-dark font-weight-bold">
                                     <label>Email </label>
                                     <input class="au-input au-input--full" type="email" name="email" placeholder="Email"
                                         id="email" required>
                                 </div>
-                                <div class="form-group">
+                                <div class="form-group font-weight-bold">
                                     <label>Senha</label>
                                     <input class="au-input au-input--full" type="password" name="password"
                                         placeholder="Senha" id="password" required>
                                 </div>
-                                <div class="login-checkbox">
+                                <div class="login-checkbox font-weight-bold ">
                                     <label>
-                                        <input type="checkbox" name="remember" id="form-password">Lembrar-me
+                                        <input class=" " type="checkbox" name="remember" id="form-password">Lembrar-me
                                     </label>
                                     <label>
                                         <a href="#">Esqueceu a Senha?</a>
@@ -75,10 +76,9 @@
                                 </div>
 
                                 <div class="mt-4">
-                                    <button class="au-btn au-btn--block btn-info m-b-20" type="button"
-                                        id="login" >
+                                    <button class="au-btn au-btn--block btn-info m-b-20" type="button" id="login">
                                         <b>
-                                        Entrar</b>
+                                            Entrar</b>
 
                                     </button>
                                 </div>
@@ -94,10 +94,10 @@
                             -->
                             </form>
                             <div class="register-link pb-3">
-                                <p>
+                                <h6>
                                     Não tem uma conta?
                                     <a href="register.html">Cadastre-se aqui</a>
-                                </p>
+                                </h6>
                             </div>
                         </div>
                     </div>
@@ -160,7 +160,7 @@
 
                 });
             */
-          
+
             $.ajax({
                 url: post_url,
                 type: 'POST',
@@ -170,7 +170,7 @@
                     sessionStorage.setItem("user", JSON.stringify(response[0]));
                     window.location.href = "index.html";
                 },
-                
+
 
             });
         });
