--- a/menu.html
+++ b/menu.html
@@ -10,7 +10,7 @@
       <ul class="list-unstyled navbar__list">
         <li class="has-sub">
           <a class="js-arrow" href="#">
-            <i class="fas fa-tachometer-alt text-white" ></i>Dashboard</a>
+            <i class="fas fa-tachometer-alt text-white"></i>Dashboard</a>
           <ul class="list-unstyled navbar__sub-list js-sub-list">
             <li>
               <a href="index.html">Dashboard 1</a>
@@ -30,7 +30,8 @@
           <a href="stock.html"> <i class="fas fa-box"></i>Estoque</a>
         </li>
         <li n>
-          <a href="vendas.html"> <i class="fas fa-box"></i>Vendas</a>
+          <a href="vendas.html"><i class="fas fa-money-bill-alt"></i>Vendas
+          </a>
         </li>
         <li>
           <a href="chart.html"> <i class="fas fa-chart-bar"></i>Gráficos</a>
@@ -116,7 +117,6 @@
     </nav>
   </div>
   <script>
-  
     // Sublist Sidebar
     try {
       var arrow = $('.js-arrow');
@@ -129,7 +129,7 @@
           that.parent().find('.js-sub-list').slideToggle("300");
         });
       });
-  
+
     } catch (error) {
       console.log(error);
     }
